<resources>
    <string name="app_name">SmartBirth</string>
    <string name="berat_badan">BERAT BADAN</string>
    <string name="camera">CAMERA</string>
    <string name="simpan">Simpan</string>
    <string name="login">LOGIN</string>
    <string name="smart_birth">SMART BIRTH</string>
    <string name="masukkan_username">Username</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="no_telpon">No Telpon</string>
    <string name="alamat">Alamat</string>
    <string name="rt_rw">RT / RW</string>
    <string name="dusun">Dusun</string>
    <string name="batal">BATAL</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_news">Berita</string>
    <string name="title_stats">Statistik</string>
    <string name="title_contact">Kontak</string>
    <string name="title_profile">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Alamat</string>
    <string name="hasil_timbangan">Hasil Timbangan</string>
    <string name="timbangan">Timbangan</string>
    <string name="cek">CEK</string>
    <string name="result">Result</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Nomor HP</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">Nomor HP tidak valid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Wajib diisi</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>


    <string name="help_map">Tentukan posisi lalu tekan tombol simpan untuk menyimpan perubahan.</string>

    <string name="perkembangan">PERKEMBANGAN</string>
    <string name="berita">BERITA</string>
    <string name="kontak">Kontak</string>
    <string name="jadwal_deskripsi">Mengetahui jadwal pelayanan dari Ibu Hamil. Mengetahui pola kesehatan dari seluruh ibu hamil.</string>


    <string name="action_add">Tambahkan</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>


</resources>
