<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_profile"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@mipmap/ic_grow"
        android:title="@string/title_stats" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@mipmap/ic_phone"
        android:title="@string/title_contact" />

</menu>

